<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".feature.create_pupil.ui.CreatePupilFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pupil_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/pupil_image"
        app:civ_border_color="@color/subTextColor"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/open_camera"
        android:src="@drawable/ic_camera"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="0dp"
        app:fabCustomSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/pupil_image"
        app:layout_constraintEnd_toEndOf="@+id/pupil_image"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/pupil_image"
        app:layout_constraintTop_toTopOf="@+id/pupil_image"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="20dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_field_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pupil_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_text_field_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:singleLine="true"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="@+id/name_text_field_layout"
        app:layout_constraintStart_toStartOf="@+id/name_text_field_layout"
        app:layout_constraintTop_toBottomOf="@+id/name_text_field_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_text_field"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country_text_field_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/last_name_text_field_layout"
        app:layout_constraintStart_toStartOf="@+id/last_name_text_field_layout"
        app:layout_constraintTop_toBottomOf="@+id/last_name_text_field_layout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edit_country_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:imeOptions="actionDone"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_pupil_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:text="@string/create_pupil"
        app:icon="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/country_text_field_layout"
        app:layout_constraintStart_toStartOf="@+id/country_text_field_layout"
        app:layout_constraintTop_toBottomOf="@+id/loading_view"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/loading_view"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/country_text_field_layout"
        app:layout_constraintStart_toStartOf="@+id/country_text_field_layout"
        app:layout_constraintTop_toBottomOf="@+id/country_text_field_layout"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>