<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".feature.pupil_info.PupilDetailFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pupil_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pupil_image"
        app:civ_border_color="@color/subTextColor"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pupil"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pupil_name"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pupil_image"
        tools:text="Ethan Harper" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pupil_id"
        style="@style/TextRegularTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pupil_name"
        tools:text="ID: 2374" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pupil_country"
        style="@style/TextRegularTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pupil_id"
        tools:text="United Kingdom, London" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_pupil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pupil_image"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_pupil"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/danger_red"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pupil_country"
        app:layout_constraintVertical_bias="1.0" />

    <include
        android:id="@id/loading_view"
        android:visibility="gone"
        layout="@layout/pupildetail_shimmer" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/success_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="pupil_image, pupil_name, pupil_id, pupil_country, delete_pupil, edit_pupil" />

</androidx.constraintlayout.widget.ConstraintLayout>